fix(build): update build script to include NestJS build command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "npm run copy-templates",
+    "build": "nest build && npm run copy-templates",
     "copy-templates": "copyfiles -u 1 src/**/*.hbs dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
